--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=RESTAPIApplication
+spring.datasource.url=jdbc:mysql://localhost:3306/cruddatabase
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+
+# Server Port
+server.port=9090
+
+# Enable debug logging for SQL
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+
+debug=true
