--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,21 @@
      		<artifactId>spring-security-config</artifactId>
      		<version>5.1.6.RELEASE</version>
    		</dependency>
+
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>javax.servlet-api</artifactId>
+    		<version>4.0.1</version>
+    		<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+    		<groupId>jakarta.servlet</groupId>
+    		<artifactId>jakarta.servlet-api</artifactId>
+    		<version>6.1.0</version>
+    		<scope>provided</scope>
+		</dependency>
+
  	</dependencies>
 
 	<build>
